# retracesoftware

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  LIBRARIES_AUDIT.md  MANIFEST.in  MODULES_AUDIT.md  MODULES_GUIDE.md  README.md  SECURITY.md  bug1.py  flasktest.py  llms.txt  meson.build  perf.py  pyproject.toml
.github/ISSUE_TEMPLATE/: replay_divergence.yml
.github/workflows/: build-test-image.yml  docker-test.yml  publish-tessl-skill.yml  release.yml  skill-review.yml  tests.yml  vscode-extension.yml
benchmarks/: README.md  analyze_results.py  external_boundary_benchmark.py  quickstart.md  run_all_benchmarks.sh  synthetic_benchmark.py
cpp/: AGENTS.md
cpp/cursor/: cursor.cpp  meson.build  module.cpp  module.h  thread_call_counts.cpp  watch_state.cpp  watch_state.h
cpp/functional/: advice.cpp  always.cpp  andpredicate.cpp  anyargs.cpp  applylist.cpp  arity_dispatch.cpp  callall.cpp  casepredicate.cpp  catchexception.cpp  compose.cpp  compose2.cpp  constantly.cpp  deepwrap.cpp  dropargs.cpp  either.cpp  first.cpp  firstof.cpp  functional.cpp  functional.h  ifthenelse.cpp  indexer.cpp  instancetest.cpp  intercept.cpp  iterate.cpp  lazy.cpp  manypredicate.cpp  mapcall.cpp  memoize.cpp  meson.build  methodinvoker.cpp  notpredicate.cpp  orpredicate.cpp  packcall.cpp  param.cpp  partial.cpp  positional_param.cpp  positional_param_transform.cpp  repeatedly.cpp  repr.cpp  selfapply.cpp  (+14 more)
cpp/stream/: binder.cpp  bindingref.cpp  consumer.cpp  consumer.h  framed_writer.h  meson.build  module.cpp  newmarker.cpp  objectstream.cpp  objectwriter.cpp  persister.cpp  persister.h  queue.cpp  queue.h  queueentry.h  size.h  stream.h  tapereader.cpp  wireformat.h  writer.h
cpp/utils/: binder.cpp  cursor.cpp  dispatcher.cpp  gccollectpred.cpp  gilwatch.c  marker.cpp  meson.build  module.cpp  mutablefunctionwrapper.cpp  observer.cpp  onalloc.cpp  runall.cpp  stack.cpp  threadlocal.cpp  threadswitchmonitor.cpp  utils.h  weakset.cpp  wrappedfunction.cpp  wrappedmember.cpp
dockertests/: .gitignore  AGENTS.md  Dockerfile.test  README.md  base-requirements-debug.txt  base-requirements.txt  docker-compose.base.yml  docker-compose.server-base.yml  example-release-workflow.yml  install.sh  run.py  runtest.sh
dockertests/henry transitive tests todo/: README.md  requirements.txt  test_transitive_candidates.py
docs/: AGENT_CONTEXT.md  DEBUGGER_DESIGN.md  DEBUGGING.md  LAYERS.md  NOGIL_REPLAY.md  PYTEST.md  PYTEST_DESIGN_PARTNER.md  README.md  REPLAY_DIVERGENCE_LOOP.md  SHAREABLE_LINKS_IMPLEMENTATION_SPEC.md  STREAM.md  THREAD_REPLAY.md  cursors.md  performance.md  shareable_reports.md  shareable_reports_deployment.md  troubleshooting.md
docs/dev/: MESON_EDITABLE_BLOCKER.md  PYTEST_AGENT_WORKFLOW_PR_DRAFT.md
docs/getting-started/: README.md  installation.md  recording-python-commands.md  vscode-extension.md
docs/internals/: README.md  architecture.md  test-harnesses.md
docs/reference/: README.md  cli.md  environment-variables.md  recording-files.md
examples/: target_hello.code-workspace  target_hello.py  target_threads.py
examples/flask_live_replay_repro/: .gitignore  README.md  record.sh  run_flask_live.py
examples/subprocess_env_capture_repro/: .gitignore  README.md  child_env_worker.py  record.sh  run_subprocess_env_capture_minimal.py
examples/target_hello.d/: index.json
examples/vscode_flask_testclient_debug_repro/: .gitignore  README.md  record.sh  run_flask_testclient.py
examples/vscode_medium_debug_repro/: .gitignore  README.md  dap_concurrent_breakpoint_repro.py  formatter.py  main.py  record.sh  repository.py  service.py
examples/vscode_medium_plus_debug_repro/: .gitignore  README.md  record.sh
failed_tests_2026-04-29_12-37_CEST/: README.md
failed_tests_2026-04-29_12-37_CEST/cachecontrol_test/: requirements.txt
failed_tests_2026-04-29_12-37_CEST/flask_test/: test.py
failed_tests_2026-04-29_12-37_CEST/memray_test/: test.py
failed_tests_2026-04-29_12-37_CEST/pyopenssl_test/: test.py
failed_tests_2026-04-29_12-37_CEST/requests_test/: test.py
failed_tests_2026-04-29_17-15_CEST/: README.md
failed_tests_2026-04-29_17-15_CEST/flask_basic_test/: test.py
failed_tests_2026-04-29_17-15_CEST/opentelemetry_test/: test.py
failed_tests_2026-04-30_10-20_CEST/: README.md
failed_tests_2026-04-30_10-20_CEST/appnope_test/: test.py
failed_tests_2026-04-30_10-20_CEST/threading_stress_test/: test.py
failed_tests_2026-04-30_12-19_CEST/: README.md
failed_tests_2026-04-30_12-19_CEST/asynclru_test/: test.py
failed_tests_2026-04-30_12-19_CEST/asynclruio_test/: test.py
failed_tests_2026-04-30_12-19_CEST/billiard_test/: test.py
failed_tests_2026-04-30_12-19_CEST/fsspec_test/: test.py
go/: AGENTS.md  go.mod
go/replay/: analysis.go  analysis_test.go  awaiting_collection.go  cache.go  (+45 more)
quickstart/: .gitignore  README.md  make_pytest_bundle.py
scripts/: smoke_shareable_reports.sh
test/: Dockerfile  requirements.txt  run_all.py  runner.py
tests/: AGENTS.md  README.md  conftest.py  helpers.py  helpers_ai_driver_e2e.py  run_record_replay.py  runner.py  test_agent_context_cli.py  test_ai_driver_application_stack.py  test_ai_driver_pytest_autodebug.py  test_autoenable.py  test_call_counter_context.py  test_cli_pytest.py  test_dap_inspection_regressions.py  test_dockertest_flask_layout.py  test_dockertests_inprocess.py  test_executable_recording_path_spaces_regression.py  test_flask_replay_unretraced_client_thread.py  test_fork_exec.py  test_henry.py  test_henry2.py  test_install_config.py  test_install_retrace.py  test_install_session.py  test_installation.py  test_issue75_autodebug_validation.py  test_issue77_dataframe_autodebug_validation.py  test_main_cli_module_overrides.py  test_main_memory_tape.py  test_main_spaces.py  test_memorytape.py  test_module_config_resolver.py  test_pipe.py  test_pytest_agent_workflow_e2e.py  test_pytest_docs.py  test_pytest_plugin.py  test_pytest_runs.py  test_record_replay.py  test_record_replay_with_pipe.py  test_report_server.py  (+13 more)
vscode/: AGENTS.md  README.md  package-lock.json  package.json
(+602 files in other folders)
