[project]
name = "retracesoftware"
dynamic = ["version"]
description = "Deterministic record and replay for Python"
license = {text = "Apache-2.0"}
authors = [
    {name = "Retrace Software", email = "info@retracesoftware.com"}
]
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Debuggers",
]

[project.scripts]
replay = "retracesoftware.replay:_exec_replay"

[project.urls]
Homepage = "https://github.com/retracesoftware/retracesoftware"
Repository = "https://github.com/retracesoftware/retracesoftware"

[build-system]
requires = [
    "meson>=1.3",
    "meson-python>=0.18.0",
    "setuptools_scm>=8.0.4",
    "ninja",
]
build-backend = "mesonpy"

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.meson-python.args]
setup = ['-Dstrip=false']
